--- a/boost-frontend/src/main/web/src/app/home/home.component.html
+++ b/boost-frontend/src/main/web/src/app/home/home.component.html
@@ -1,5 +1,5 @@
   <div class="jumbotron container text-center">
-    <button class="btn btn-lg btn-outline-danger" routerLink="/books"><fa-icon class="fa-4x" [icon]="['fas','headphones-alt']"></fa-icon> Start listening</button>
+    <button class="btn btn-lg btn-outline-secondary" routerLink="/books"><fa-icon class="fa-4x" [icon]="['fas','headphones-alt']"></fa-icon> Start listening</button>
     <hr class="my-4">
     <p *ngIf="!isLoggedIn()">You're not logged in.</p>
     <div *ngIf="isLoggedIn()">
