--- a/boost-frontend/src/main/web/src/app/audio-player/audio-player.component.html
+++ b/boost-frontend/src/main/web/src/app/audio-player/audio-player.component.html
@@ -1,5 +1,5 @@
 <div class="form-group">
-  <label [htmlFor]="upload.id" *ngIf="showTitle" class="badge text-muted text-uppercase ">{{title}}</label>
+  <label [htmlFor]="upload.id" *ngIf="showTitle" class="badge text-light text-uppercase mr-1 ">{{title}}</label>
   <audio #audioSource [id]="upload.id" (playing)="propagatePlayingEvent($event)" controls class="bg-transparent pr-3 ">
     <source [src]="getSource()">
   </audio>
