--- a/boost-frontend/src/main/web/src/app/login/login.component.html
+++ b/boost-frontend/src/main/web/src/app/login/login.component.html
@@ -12,7 +12,7 @@
   <div >
     <app-audio-player  [upload]="getCurrentChapter().upload" [title]="getCurrentChapter().title"></app-audio-player>
   </div>
-  <button class="btn btn-outline-danger text-white my-2 my-sm-0 " type="button" (click)="logout()">
+  <button class="btn btn-outline-secondary text-white my-2 my-sm-0 " type="button" (click)="logout()">
     <span>{{getUser().username | uppercase}}</span>&nbsp;
     <fa-icon [icon]="faSignOutAlt"></fa-icon>
   </button>
