--- a/boost-frontend/src/main/web/src/app/audio-player/audio-player.component.html
+++ b/boost-frontend/src/main/web/src/app/audio-player/audio-player.component.html
@@ -1,6 +1,6 @@
-<div class="form-group">
-  <label [htmlFor]="upload.id" *ngIf="showTitle" class="badge text-light text-uppercase mr-1 ">{{title}}</label>
-  <audio #audioSource [id]="upload.id" (playing)="propagatePlayingEvent($event)" controls class="bg-transparent pr-3 ">
-    <source [src]="getSource()">
+<div  class="form-group" *ngIf="showPlayer && upload">
+  <a  [routerLink]="linkDetail"  *ngIf="showTitle" class="badge label text-link text-warning text-uppercase mr-1 ">{{title}}</a>
+  <audio  #audioSource [id]="upload.id" (playing)="propagatePlayingEvent($event)" controls class="bg-transparent pr-3 ">
+    <source [src]="getSource()"  >
   </audio>
 </div>
