--- a/boost-frontend/src/main/web/src/app/stars/stars.component.html
+++ b/boost-frontend/src/main/web/src/app/stars/stars.component.html
@@ -3,6 +3,6 @@
     <fa-icon  *ngIf="editable && editMode" (mouseenter)="updateRating(i)" [icon]="getIconFromCurr(i, inputStar.star)"></fa-icon>
     <fa-icon  *ngIf="!editable || !editMode" [icon]="getIcon(i)"></fa-icon>
   </span>
-  <button class="btn btn-link text-muted" *ngIf="editable && !editMode" (click)="editMode=!editMode">Vote</button>
-  <button class="btn btn-link text-muted" *ngIf="editable &&  editMode" (click)="emitVote()">Submit</button>
+  <a class="btn btn-link text-secondary clickable" *ngIf="editable && !editMode" (click)="editMode=!editMode">Vote({{star.length}})</a>
+  <a class="btn btn-link text-success clickable" *ngIf="editable &&  editMode" (click)="emitVote()">Submit</a>
 </div>
