--- a/boost-frontend/src/main/web/src/app/audio-player/audio-player.component.html
+++ b/boost-frontend/src/main/web/src/app/audio-player/audio-player.component.html
@@ -1,6 +1,6 @@
-<div  class="form-group" *ngIf="showPlayer && upload">
-  <a  [routerLink]="linkDetail"  *ngIf="showTitle" class="badge label text-link text-muted text-warning text-uppercase mr-1 ">{{title}}</a>
-  <audio  #audioSource [id]="upload.id" (playing)="propagatePlayingEvent($event)" controls class="bg-transparent pr-3 text-muted">
+<div  class="form-group mr-2" *ngIf="showPlayer && upload">
+  <a [routerLink]="linkDetail"  *ngIf="showTitle" class="badge label text-link text-muted text-warning text-uppercase mr-2 ">{{title}}</a>
+  <audio  #audioSource [id]="upload.id" (playing)="propagatePlayingEvent($event)" controls [ngClass]="'bg-transparent pr-3  text-muted' + width? 'w-'+width : ''">
     <source [src]="getSource()"  >
   </audio>
 </div>
