--- a/boost-frontend/src/main/web/src/app/books-detail/books-detail.component.html
+++ b/boost-frontend/src/main/web/src/app/books-detail/books-detail.component.html
@@ -2,25 +2,29 @@
   <div class="text-center mb-2">
     <button class="btn btn-sm btn-outline-info mt-2 text-uppercase" (click)="back()"><fa-icon [icon]="faArrowLeft"></fa-icon></button>
   </div>
-      <div *ngIf="book && !editMode">
-        <div class="clearfix"></div>
+  <div class=" card " *ngIf="book && !editMode">
+    <div class="card-body ">
+      <div class="container">
         <div class="row">
-          <div class="col-lg-2  offset-lg-1 col-sm-12">
-            <app-image-loader *ngIf="book.cover" [imageId]="book.cover.id"></app-image-loader>
+          <div class="col-lg-4 ">
+            <app-image-loader  *ngIf="book.cover" [imageId]="book.cover.id"></app-image-loader>
           </div>
-            <div class="col-lg-8 col-sm-12">
-              <p class="lead" >
-                {{book.title}}<small class="text-muted"> by {{book.author}}</small>
-              </p>
-              <p>{{book.description}}</p>
-            </div>
+          <div class="col-lg-8">
+          <span class="lead" >
+            {{book.title}}<small class="text-muted"> by {{book.author}}</small>
+          </span>
+            <p>{{book.description}}</p>
+              <app-stars [editable]="isLoggedIn() && !editMode" [star]="book.stars" (updateStar)="rateBook($event)"></app-stars>
+              <app-chapters *ngIf="book" [bookId]="book.id"></app-chapters>
+          </div>
         </div>
-          <div class="col-12 ">
-            <app-stars [editable]="isLoggedIn() && !editMode" [star]="book.stars" (updateStar)="rateBook($event)"></app-stars>
-          </div>
+      </div>
+      <div class="row">
         <div class="col-12 float-right">
-            <app-chapters *ngIf="book" [bookId]="book.id"></app-chapters>
-          </div>
         </div>
+      </div>
+
+    </div>
+  </div>
     <app-book-form [showCross]="false" *ngIf="editMode && book" [editMode]="editMode" [formVisible]="true" [book]="book"></app-book-form>
 </div>
