--- a/boost-frontend/src/main/web/src/app/books-detail/books-detail.component.html
+++ b/boost-frontend/src/main/web/src/app/books-detail/books-detail.component.html
@@ -2,7 +2,7 @@
   <div class="text-center mb-2">
     <button class="btn btn-sm btn-outline-info mt-2 text-uppercase" (click)="back()"><fa-icon [icon]="faArrowLeft"></fa-icon></button>
   </div>
-  <div class=" card " *ngIf="book && !editMode">
+  <div class="card border-0" *ngIf="book && !editMode">
     <div class="card-body ">
       <div class="container">
         <div class="row">
