--- a/boost-frontend/src/main/web/src/app/app.component.html
+++ b/boost-frontend/src/main/web/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<main role="main" class="flex-shrink-0">
+<main role="main" class="flex-shrink-0 mt-lg-5 pt-lg-5">
   <div class="text-center">
     <img class="img-responsive mt-5 py-3 " src="/assets/logo.png">
   </div>
