--- a/boost-frontend/src/main/web/src/app/book-form/book-form.component.html
+++ b/boost-frontend/src/main/web/src/app/book-form/book-form.component.html
@@ -2,7 +2,7 @@
   <button class="border-radius-0 border-left-0 btn btn-outline-primary mb-2" (click)="toggleFormVisible()"
           *ngIf="!formVisible"><fa-icon [icon]="faPlus"></fa-icon> </button>
   <div class="row" *ngIf="formVisible" >
-    <div class="card border-0">
+    <div class="card border-0 w-100 ">
       <div class="card-header bg-white text-secondary">
         <span class="text-uppercase"># {{bookCopy.id ? bookCopy.id : 'New'}}</span>
         <div class="float-right" *ngIf="showCross">
