--- a/boost-frontend/src/main/web/src/styles.css
+++ b/boost-frontend/src/main/web/src/styles.css
@@ -4,7 +4,9 @@
 .form-control:focus {
   box-shadow: none!important;
 }
-
+.no-focus:focus {
+  box-shadow: none!important;
+}
 
 .clickable {
   cursor: pointer;
