--- a/boost-frontend/src/main/web/src/app/book-form/book-form.component.html
+++ b/boost-frontend/src/main/web/src/app/book-form/book-form.component.html
@@ -1,5 +1,5 @@
 <div>
-  <button class="border-radius-0 border-left-0 btn btn-outline-primary mb-2" (click)="toggleFormVisible()"
+  <button class="border-radius-0 no-focus border-left-0 btn btn-outline-primary mb-2" (click)="toggleFormVisible()"
           *ngIf="!formVisible"><fa-icon [icon]="faPlus"></fa-icon> </button>
   <div class="row" *ngIf="formVisible" >
     <div class="card border-0 w-100 ">
