--- a/boost-frontend/src/main/web/src/app/books/books.component.html
+++ b/boost-frontend/src/main/web/src/app/books/books.component.html
@@ -45,7 +45,7 @@
       </tbody>
       <tbody *ngIf="!books || books.empty ">
       <tr class="bg-dark">
-        <td colspan="11" class="text-white text-center"><strong>No result!</strong></td>
+        <td colspan="11" class="text-white text-uppercase text-center"><strong>No result!</strong></td>
       </tr>
       </tbody>
     </table>
