--- a/boost-frontend/src/main/web/src/app/app.component.html
+++ b/boost-frontend/src/main/web/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
-<main role="main" class="flex-shrink-0 mt-lg-5 pt-lg-5">
-  <div class="text-center">
-    <h1 [innerHTML]="'\u266D\u266E'" class="display-1 text-muted mt-5 mb-5 py-5 "></h1>
+<main role="main" class="flex-shrink-0 mt-lg-5 ">
+  <div class="text-center ">
+    <h1 [innerHTML]="'\u266D\u266E\u266E\u266F'" class="display-1 text-muted border-secondary  mt-5 mb-5 py-5 "></h1>
   </div>
   <div class="routerContent">
     <router-outlet></router-outlet>
