--- a/boost-frontend/src/main/web/src/app/books-detail/books-detail.component.html
+++ b/boost-frontend/src/main/web/src/app/books-detail/books-detail.component.html
@@ -1,6 +1,11 @@
 <div class="container mb-4">
   <div class="text-center mb-2">
-    <button class="btn btn-sm btn-outline-info mt-2 text-uppercase" (click)="back()"><fa-icon [icon]="faArrowLeft"></fa-icon></button>
+
+    <div class=" btn-group mt-2  ">
+      <button class="btn  btn-outline-info  text-uppercase" (click)="back()"><fa-icon [icon]="faArrowLeft"></fa-icon></button>
+      <button [id]="book && book.id + 'editaction'" *ngIf="hasRole('ADMIN')" (click)="navigate(book,'edit')" class="btn  btn-outline-success"
+              aria-label="Edit"><fa-icon [icon]="['fas','edit']"></fa-icon></button>
+    </div>
   </div>
   <div class="card border-0 " *ngIf="book && !editMode">
     <div class="card-body ">
