--- a/boost-frontend/src/main/web/src/app/home/home.component.html
+++ b/boost-frontend/src/main/web/src/app/home/home.component.html
@@ -1,5 +1,5 @@
-  <div class="jumbotron container text-center">
-    <button class="btn btn-lg btn-outline-secondary" routerLink="/books"><fa-icon class="fa-4x" [icon]="['fas','headphones-alt']"></fa-icon> Start listening</button>
+  <div class="jumbotron bg-transparent  text-center">
+    <button class="btn btn-lg border-0 btn-outline-secondary" routerLink="/books"><fa-icon class="fa-4x" [icon]="['fas','headphones-alt']"></fa-icon> Start listening</button>
     <hr class="my-4">
     <p *ngIf="!isLoggedIn()">You're not logged in.</p>
     <div *ngIf="isLoggedIn()">
@@ -7,21 +7,19 @@
       <p>Your access roles are: <span class="badge badge-info mr-1" *ngFor="let role of getUser().authorities">{{role.authority}}</span></p>
     </div>
 
-  </div>
-<div *ngIf="books" class="container text-center">
-  <h2 class="text-muted text-uppercase">Last</h2>
-  <div class="d-flex flex-row mb-2 p-2">
-    <div *ngFor="let book of books" class="col-lg-4">
-      <div class="card" style="width: 18rem;">
-        <div class="card-img-top">
-          <app-image-loader *ngIf="book.cover" [imageId]="book.cover.id"></app-image-loader>
-        </div>
-        <div class="card-body">
-          <h5 class="card-title">{{book.title}}</h5>
-          <p class="card-text">   {{ (book.description && book.description.length>100)? (book.description | slice:0:100)+'..':(book.description ? book.description : 'No description available') }}</p>
-          <a [routerLink]="getBookDetailLink(book)" class="btn btn-outline-primary no-focus  text-uppercase btn-outline-primary">More</a>
+    <div *ngIf="books" class="container text-center">
+      <h2 class="text-muted bg-light mt-2 text-uppercase">Latest</h2>
+      <div class="d-flex flex-row mb-2 p-2">
+        <div *ngFor="let book of books" class="col-lg-4 ">
+          <div class="card" >
+            <app-image-loader [customClass]="' card-img-top '" *ngIf="book.cover" [imageId]="book.cover.id"></app-image-loader>
+            <div class="card-body border-0 bg-transparent">
+              <h5 class="card-title">{{book.title}}</h5>
+              <p class="card-text">   {{ (book.description && book.description.length>100)? (book.description | slice:0:100)+'..':(book.description ? book.description : 'No description available') }}</p>
+              <a [routerLink]="getBookDetailLink(book)" class="btn btn-outline-primary no-focus  text-uppercase btn-outline-primary">More</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
