--- a/boost-frontend/src/main/web/src/app/error/error.component.html
+++ b/boost-frontend/src/main/web/src/app/error/error.component.html
@@ -1,13 +1,9 @@
-<div class="col-sm-12 mt-4">
-  <div class="container">
-    <div class="jumbotron">
-      <div class="row">
-        <div class="col-lg-4 col-sm-12">
-          <h1 class="display-4 text-danger">{{status}} </h1>
+    <div class="jumbotron container bg-transparent ">
+      <div class="mb-0">
+        <div class="text-center container">
+          <h1 class="display-4 text-danger ">{{status}} </h1>
           <p class="lead text-danger">{{label}}</p>
           <p class="lead">{{message}}</p>
         </div>
       </div>
     </div>
-  </div>
-</div>
