--- a/boost-frontend/src/main/web/src/styles.css
+++ b/boost-frontend/src/main/web/src/styles.css
@@ -7,7 +7,9 @@
 .no-focus:focus {
   box-shadow: none!important;
 }
-
+.btn:focus{
+  box-shadow: none!important;
+}
 .clickable {
   cursor: pointer;
 }
