--- a/boost-frontend/src/main/web/src/app/app.component.html
+++ b/boost-frontend/src/main/web/src/app/app.component.html
@@ -1,13 +1,13 @@
 <app-navbar></app-navbar>
 <main role="main" class="flex-shrink-0 mt-lg-5 ">
-  <div class="text-center ">
-    <h1 class="display-1 text-muted border-secondary  mt-5  pt-5 ">
-      <span class="text-primary font-weight-bold" [innerHTML]="'\u266D'"></span>
-      <span class="text-danger font-weight-bold" [innerHTML]="'\u266E'"></span>
-      <span class="text-warning font-weight-bold" [innerHTML]="'\u266E'"></span>
-      <span class="text-success font-weight-bold" [innerHTML]="'\u266F'"></span>
+  <div class="text-center  mt-5  pt-5 ">
+    <span  [routerLink]="'/'" class="clickable display-1 text-muted border-secondary  ">
+      <span class="text-primary  font-weight-bold" [innerHTML]="'\u266D'"></span>
+      <span class="text-danger  font-weight-bold" [innerHTML]="'\u266E'"></span>
+      <span class="text-warning  font-weight-bold" [innerHTML]="'\u266E'"></span>
+      <span class="text-success  font-weight-bold" [innerHTML]="'\u266F'"></span>
 
-    </h1>
+    </span>
   </div>
   <div class="routerContent">
     <router-outlet></router-outlet>
