--- a/boost-frontend/src/main/web/src/styles.css
+++ b/boost-frontend/src/main/web/src/styles.css
@@ -19,6 +19,11 @@
 .clickable {
   cursor: pointer;
   outline: 0;
+  user-select: none; /* supported by Chrome and Opera */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
 }
 .border-radius-0{
   border-radius: 0 !important;
