--- a/boost-frontend/src/main/web/src/app/login/login.component.html
+++ b/boost-frontend/src/main/web/src/app/login/login.component.html
@@ -9,8 +9,8 @@
   </button>
 </div>
 <div *ngIf="isLoggedIn()" class="form-inline my-2 my-lg-0">
-  <div *ngIf="getCurrentChapter()" >
-    <app-audio-player [currentPlayer]="true" [linkDetail]="getChapterDetailLink()" [upload]="getCurrentChapter().upload" [title]="getCurrentChapter().title"></app-audio-player>
+  <div *ngIf="currentChapter" >
+    <app-audio-player [currentTime]="currentChapter.currentTime || 0.0" [updateCurrentTimeUrl]="getUpdateCurrentTimeUrl()" [currentPlayer]="true" [linkDetail]="getChapterDetailLink()" [upload]="currentChapter.upload" [title]="currentChapter.title"></app-audio-player>
   </div>
   <button class="btn border-0 btn-outline-danger text-white my-2 my-sm-0 " type="button" (click)="logout()">
     <span>{{getUser().username | uppercase}}</span>&nbsp;
