--- a/boost-frontend/src/main/web/src/app/books/books.component.html
+++ b/boost-frontend/src/main/web/src/app/books/books.component.html
@@ -1,4 +1,6 @@
 <div class="container mt-5">
+  <div *ngIf="!books || books.empty" class="mt-lg-5 pt-lg-5 "></div>
+  <div *ngIf="!books || books.empty" class="mt-lg-5 pt-lg-5"></div>
   <datalist id="listTitles"  *ngIf="titles">
     <select class="form-control" >
       <option *ngFor="let title of titles" [value]="title.title"></option>
@@ -7,7 +9,7 @@
   <div [class]="bookFormVisible?'container':'input-group text-center '">
       <input  list="listTitles" [(ngModel)]="searchText" *ngIf="!bookFormVisible" (ngModelChange)="searchBookByTitle(searchText)" type="text"  [class]="'col-lg-5 ml-auto form-control border-right-0 '" placeholder="Search...">
 
-      <button *ngIf="!bookFormVisible"  [disabled]="loading" (click)="searchBookByTitle(searchText)" class="btn no-focus btn-outline-success  mb-2 border-radius-0"><fa-icon [icon]="['fas','search']" ></fa-icon></button>
+      <button *ngIf="!bookFormVisible"  [disabled]="loading || !searchText" (click)="searchBookByTitle(searchText)" class="btn no-focus btn-outline-success  mb-2 border-radius-0"><fa-icon [icon]="['fas','search']" ></fa-icon></button>
 
     <div  [ngClass]="bookFormVisible ? '':'btn-group mr-auto'">
       <button *ngIf="!bookFormVisible && isLoggedIn()"  [disabled]="loading" (click)="getBooks(1)" class="btn border-radius-0 no-focus btn-outline-secondary border-left-0  mb-2  "><fa-icon [icon]="faSync" ></fa-icon></button>
@@ -15,7 +17,7 @@
     </div>
 
   </div>
-  <div class=" table-responsive mt-2 " *ngIf="books">
+  <div class=" table-responsive mt-2 " *ngIf="books &&!books.empty">
     <table class="table table-hover table-light table-sm">
       <thead>
       <tr class="bg-light">
