--- a/boost-frontend/src/main/web/src/app/home/home.component.html
+++ b/boost-frontend/src/main/web/src/app/home/home.component.html
@@ -10,10 +10,10 @@
     <!-- history -->
     <div *ngIf="isLoggedIn() && histories && histories.length" class="container text-center">
       <h2 class="text-muted bg-light mt-2 text-uppercase">Your History</h2>
-      <div class="d-flex flex-row mb-2 p-2">
+      <div class="mb-2 p-2 row ">
         <div *ngFor="let history of histories" class="col-lg-4 ">
           <div class="card bg-light" >
-            <div class="card-body border-0 bg-transparent ">
+            <div class="card-body border-0 bg-transparent  ">
               <app-audio-player [linkDetail]="getChapterDetailLink(history.chapter)" [updateCurrentTimeUrl]="getUpdateCurrentTimeUrl(history)" [currentTime]="history.currentTime" [title]="history.chapter.title" [upload]="history.chapter.upload"></app-audio-player>
             </div>
           </div>
@@ -24,8 +24,8 @@
     <!-- last -->
     <div *ngIf="books" class="container text-center">
       <h2 class="text-muted bg-light mt-2 text-uppercase">Latest</h2>
-      <div class="d-flex flex-row mb-2 p-2">
-        <div *ngFor="let book of books" class="col-lg-4 ">
+      <div class="row mb-2 p-2">
+        <div *ngFor="let book of books" class="col-lg-4">
           <div class="card" >
             <app-image-loader [routerLink]="getBookDetailLink(book)" [customClass]="'clickable card-img-top '" *ngIf="book.cover" [imageId]="book.cover.id"></app-image-loader>
             <div class="card-body border-0 bg-transparent">
@@ -40,7 +40,7 @@
 
     <div *ngIf="topBooks" class="container text-center">
       <h2 class="text-muted bg-light mt-2 text-uppercase">TOP</h2>
-      <div class="d-flex flex-row mb-2 p-2">
+      <div class="row mb-2 p-2">
         <div *ngFor="let book of topBooks" class="col-lg-4 ">
           <div class="card" >
             <app-image-loader [routerLink]="getBookDetailLink(book)" [customClass]="'clickable card-img-top '" *ngIf="book.cover" [imageId]="book.cover.id"></app-image-loader>
