--- a/boost-frontend/src/main/web/src/app/books-detail/books-detail.component.html
+++ b/boost-frontend/src/main/web/src/app/books-detail/books-detail.component.html
@@ -1,3 +1,5 @@
+<app-logo [headerClass]="'text-center  mt-5  pt-5 '"></app-logo>
+
 <div class="container mb-4">
   <div class="text-center mb-2">
 
