--- a/boost-frontend/src/main/web/src/app/home/home.component.html
+++ b/boost-frontend/src/main/web/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <app-logo [headerClass]="'text-center  mt-5  pt-5 '"></app-logo>
-<div class="jumbotron bg-transparent  text-center">
+<div class="container  text-center">
     <button class="btn btn-lg border-0 btn-outline-secondary" routerLink="/books"><fa-icon class="fa-4x" [icon]="['fas','headphones-alt']"></fa-icon></button>
     <hr class="my-4">
     <p *ngIf="!isLoggedIn()">You're not logged in.</p>
